Added all indexes and serializers
