# app/serializers/orchestra_serializer.rb
@@ -1,0 +1,12 @@
+# frozen_string_literal: true
+
+class OrchestraSerializer
+  include FastJsonapi::ObjectSerializer
+
+  has_many :events
+
+  attributes :name,
+             :created_at,
+             :updated_at
+
+end
